DT-2004-06-01-3: Bugfix:    o Fixing DT-2004-06-01-2
                 Changed:   qsub
                 Issue:     Related to 1075

JG-2004-06-01-1: Bugfix:    Fixed memory leaks in japi and drmaa libs.
                 Review:    DT

DT-2004-06-01-2: Bugfix:    o Fixing DT-2004-06-01-1
                            - NOTE: checking in *so* I can compile and test
                 Changed:   qsub
                 Issue:     Related to 1075

DT-2004-06-01-1: Bugfix:    o Better handling of errors in qsub
                            - NOTE: checking in *so* I can compile and test
                 Changed:   qsub, JAPI
                 Issue:     Related to 1075

DT-2004-06-01-0: Bugfix:    o Fixed state of JAPI event client thread on aborted
                              startup.
                            o Fixed typo in howtos
                 Changed:   JAPI, howtos
                 Issue:     1075

MD-2004-06-01-0: Bugfix:    Db reinitialized during restore
                 Changed:   inst_sge

JG-2004-06-01-0: Testsuite: Don't set file permissions when installing zip 
                            packages. 
                            Fixed qmaster size test.

SG-2004-05-28-0: Bugfix:    fixed qmaster on HP-11. The problem was a 
                            "char save[32k]" in the file: 
                            daemons/qmaster/sge_give_jobs.c
                 Changed:   qmaster
                 Review:    MD

MD-2004-05-28-3: Enhancem:  README-Upgrade.txt

DT-2004-05-28-5: Bugfix:    o Resolved conflict between new file staging howto
                              and previous
                 Changed:   howtos

MD-2004-05-28-2: Bugfix:    - message
                 Changed:   inst_sge

MD-2004-05-28-1: Enhancem:  - auto backup
                 Changed:   inst_sge

DT-2004-05-28-4: Bugfix:    o Added file staging to howto main page
                 Changed:   howtos
                 Issue:     952

DT-2004-05-28-3: Bugfix:    o Changes to DRMAA howto